<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="text_add_product">Tambah Produk</string>
    <string name="desc_delete_button">delete button</string>
    <string name="desc_img_photo">img photo</string>
    <string name="text_choose_unit_product">Pilih Satuan Produk</string>
    <string name="select_city">Pilih Kota</string>
    <string name="text_choose_type_product">Pilih Tipe Produk</string>
    <string name="default_city">Medan</string>
    <string name="text_chose_category_product">Pilih Kategori Produk</string>
    <string name="text_product_name">Nama Produk</string>
    <string name="text_product_category">Kategori Produk</string>
    <string name="text_product_type">Tipe Produk</string>
    <string name="text_product_unit">Satuan Produk</string>
    <string name="text_price_variant">Variant Harga</string>
    <string name="text_add_variant_price">+ Tambah varian harga</string>
    <string name="text_max_9_image">Pilih foto (Max 9)</string>
    <string name="text_add_image">+ Tambah foto</string>
    <string name="foto_pasar_dengan_posisi_lanskap">Foto Pasar dengan posisi Lanskap</string>
    <string name="nama_pasar">Nama Pasar</string>
    <string name="alamat_pasar">Alamat Pasar</string>
    <string name="kota_atau_kecamatan">Kota atau Kecamatan</string>
    <string name="detail_alamat">Detail alamat</string>
    <string name="pilih_pinpoint">Pilih Pinpoint</string>
    <string name="message_add_market">Pasar yang ditambahkan akan di review terlebih dahulu oleh admin IAGORA</string>
    <string name="tambahkan_pasar">Tambahkan Pasar</string>
    <string name="tambah_pasar">Tambah Pasar</string>
    <string name="cari_pasar">Cari Pasar</string>
    <string name="foto_product_dengan_posisi_lanskap">Foto product dengan posisi Lanskap</string>
    <string name="harga">Harga</string>
</resources>