<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.IAGORAWingman">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/progressBar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:visibility="invisible"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingHorizontal="15dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_image_product"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#eeee"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TextViewReguler.OpenSans_14sp_020202"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="20dp"
                        android:gravity="center"
                        android:text="@string/foto_product_dengan_posisi_lanskap"
                        app:drawableTopCompat="@drawable/ic_camera_rounded"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/img_product"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/text_add_image" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvListPhotoProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_image_product"
                tools:listitem="@layout/item_list_photo_product" />


            <TextView
                android:id="@+id/tvTitleProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/text_product_name"
                android:theme="@style/TextViewSemiBold.OpenSans_15sp_020202"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvListPhotoProduct" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilProductName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:hint="@string/text_product_name"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeWidthFocused="1.5dp"
                app:counterEnabled="true"
                app:counterMaxLength="70"
                app:counterTextAppearance="@style/TextViewReguler.OpenSans_12sp_020202"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleProductName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="70"
                    android:paddingVertical="15dp"
                    tools:ignore="KeyboardInaccessibleWidget" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvTitleKategoriProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/text_product_category"
                android:theme="@style/TextViewSemiBold.OpenSans_15sp_020202"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilProductName" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDropDownKategori"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:labelFor="@id/dropdownChildCategoryProduct"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeWidthFocused="1.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleKategoriProduct">

                <AutoCompleteTextView
                    android:id="@+id/dropdownChildCategoryProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:maxHeight="200dp"
                    android:paddingVertical="15dp"
                    android:text="@string/text_chose_category_product" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvTitleTypeProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/text_product_type"
                android:theme="@style/TextViewSemiBold.OpenSans_15sp_020202"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilDropDownKategori" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDropDownTypeProduct"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:labelFor="@id/dropdownChildTypeProduct"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxStrokeWidthFocused="1.5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleTypeProduct">

                <AutoCompleteTextView
                    android:id="@+id/dropdownChildTypeProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:maxHeight="200dp"
                    android:paddingVertical="15dp"
                    android:text="@string/text_choose_type_product" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvTitlePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/harga"
                android:theme="@style/TextViewSemiBold.OpenSans_15sp_020202"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilDropDownTypeProduct" />

            <include
                android:id="@+id/layout_pricing"
                layout="@layout/layout_pricing_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitlePrice" />

            <TextView
                android:id="@+id/tvAddVariant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tambah varian harga"
                android:layout_marginTop="26dp"
                android:textAppearance="@style/TextViewSemiBold.OpenSans_14sp_020202"
                app:drawableStartCompat="@drawable/ic_add_24"
                android:textColor="@color/link"
                android:drawablePadding="10dp"
                app:layout_constraintTop_toBottomOf="@id/layout_pricing"
                app:drawableTint="@color/link" />

            <Button
                android:id="@+id/btnAddProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextViewSemiBold.OpenSans_16sp_020202"
                app:layout_constraintTop_toBottomOf="@id/tvAddVariant"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="Tambah produk"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>